--- a/style.css
+++ b/style.css
@@ -65,4 +65,6 @@ button:hover {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
 }
