--- a/style.css
+++ b/style.css
@@ -67,4 +67,9 @@ button:hover {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+    width: calc(33% - 20px); /* 3 por linha */
+    box-sizing: border-box;
 }
